tests/compile_fail/try_catch_message_lifetime.stderr
error[E0597]: `try_catch` does not live long enough
  --> $DIR/try_catch_message_lifetime.rs:11:14
   |
9  |   let _message = {
   |       -------- borrow later stored here
10 |     let mut try_catch = v8::TryCatch::new(hs);
11 |     let tc = try_catch.enter();
   |              ^^^^^^^^^ borrowed value does not live long enough
12 |     tc.message().unwrap()
13 |   };
   |   - `try_catch` dropped here while still borrowed
